y.output
   0  $accept : start $end

   1  start : program

   2  program : PROGRAM_BEGIN functions PROGRAM_END
   3          |

   4  functions : functions function
   5            | function

   6  function : ident_type function_name LSQ parameter_list RSQ END_STATEMENT body

   7  func_start : function_name LSQ parameter_list RSQ

   8  function_name : VARIABLE

   9  parameter_list : ident_type parameter COMMA SMALLER_THAN parameter_list BIGGER_THAN
  10                 | ident_type parameter
  11                 |

  12  parameter : variable

  13  variable : VARIABLE
  14           | CONST

  15  body : stmts RETURN variable

  16  stmts : stmt
  17        | stmt stmts
  18        | COMMENT stmts
  19        | stmts COMMENT

  20  stmt : matched
  21       | unmatched

  22  matched : IF log_stmts END_STATEMENT matched ELSE END_STATEMENT matched
  23          | non_if_stmts

  24  unmatched : IF log_stmts END_STATEMENT stmt
  25            | IF log_stmts END_STATEMENT matched ELSE END_STATEMENT unmatched

  26  non_if_stmts : assignment
  27               | primitive_func
  28               | WHILE_LOOP
  29               | FOR_LOOP
  30               | PRINT_STATEMENT

  31  primitive_func : inclination
  32                 | altitude
  33                 | temperature
  34                 | acceleration
  35                 | camera_on
  36                 | camera_off
  37                 | picture
  38                 | capture
  39                 | connect
  40                 | time
  41                 | get_timer

  42  while_loop : WHILE log_stmts END_STATEMENT stmts
  43             | WHILE comparison END_STATEMENT stmts

  44  for : FOR_LOOP ident_type var COMMA comparison COMMA assignment END_STATEMENT stmts

  45  inclination : INCLINE_FUNC LSQ RSQ

  46  altitude : ALTITUDE_FUNC LSQ RSQ END_STATEMENT

  47  temperature : TEMPR_FUNC LSQ RSQ END_STATEMENT

  48  acceleration : ACCEL_FUNC LSQ RSQ END_STATEMENT

  49  camera_on : ON_FUNC LSQ variable RSQ END_STATEMENT

  50  camera_off : OFF_FUNC LSQ variable RSQ END_STATEMENT

  51  picture : ident_type PICTURE_FUNC LSQ variable RSQ END_STATEMENT

  52  capture : ident_type CAPTURE_FUNC LSQ RSQ END_STATEMENT

  53  connect : ident_type CONNECT_FUNC LSQ variable COMMA variable RSQ END_STATEMENT

  54  time : ident_type TIME_FUNC LSQ variable RSQ END_STATEMENT

  55  get_timer : ident_type TIMER_FUNC LSQ variable RSQ END_STATEMENT

  56  log_stmts : log_stmts OR and_cond
  57            | and_cond

  58  and_cond : and_cond AND not_cond
  59           | not_cond

  60  not_cond : NOT log_stmts
  61           | log_stmts

  62  assignment : ident_type var ASGN_OP log_stmts
  63             | ident_type var ASGN_OP math_expr
  64             | ident_type var ASGN_OP var BELONGS func_start
  65             | ident_type var ASGN_OP dronic
  66             | var ASGN_OP var
  67             | var ASGN_OP log_stmts
  68             | var ASGN_OP math_expr
  69             | var ASGN_OP VARIABLE BELONGS func_start

  70  comparison : var BIGGER_THAN var
  71             | dronic BIGGER_THAN dronic
  72             | var LESS_THAN var
  73             | dronic LESS_THAN dronic
  74             | var BIGGER_EQUAL var
  75             | dronic BIGGER_EQUAL dronic
  76             | var LESS_EQUAL var
  77             | dronic LESS_EQUAL dronic
  78             | var EQUAL var
  79             | dronic EQUAL dronic
  80             | var NOT_EQUAL var
  81             | dronic NOT_EQUAL dronic

  82  var : VARIABLE

  83  math_expr : math_expr ADD term
  84            | math_expr SUBTRACT term
  85            | term

  86  term : term MULTIPLY factor
  87       | term
  88       | factor
  89       | factor

  90  factor :
  91         | ADD factor
  92         | SUBTRACT factor

  93  print : print LSQ dronic RSQ
  94        | print LSQ log_stmts RSQ
  95        | print LSQ primitive_func RSQ
  96        | print LSQ variable RSQ

  97  input :

  98  dronic : TYPE_STRING
  99         | TYPE_FLOAT
 100         | TYPE_INT
 101         | TYPE_BOOL

 102  ident_type : TYPE_INT
 103             | TYPE_BOOL
 104             | TYPE_FLOAT
 105             | TYPE_STRING
 106             | VOID_FUNC
 107             | DRONE
 108             | TIMER
 109             |

state 0
	$accept : . start $end  (0)
	program : .  (3)

	PROGRAM_BEGIN  shift 1
	$end  reduce 3

	start  goto 2
	program  goto 3


state 1
	program : PROGRAM_BEGIN . functions PROGRAM_END  (2)
	ident_type : .  (109)

	DRONE  shift 4
	TIMER  shift 5
	TYPE_STRING  shift 6
	TYPE_FLOAT  shift 7
	TYPE_INT  shift 8
	TYPE_BOOL  shift 9
	VOID_FUNC  shift 10
	VARIABLE  reduce 109

	functions  goto 11
	function  goto 12
	ident_type  goto 13


state 2
	$accept : start . $end  (0)

	$end  accept


state 3
	start : program .  (1)

	.  reduce 1


state 4
	ident_type : DRONE .  (107)

	.  reduce 107


state 5
	ident_type : TIMER .  (108)

	.  reduce 108


state 6
	ident_type : TYPE_STRING .  (105)

	.  reduce 105


state 7
	ident_type : TYPE_FLOAT .  (104)

	.  reduce 104


state 8
	ident_type : TYPE_INT .  (102)

	.  reduce 102


state 9
	ident_type : TYPE_BOOL .  (103)

	.  reduce 103


state 10
	ident_type : VOID_FUNC .  (106)

	.  reduce 106


state 11
	program : PROGRAM_BEGIN functions . PROGRAM_END  (2)
	functions : functions . function  (4)
	ident_type : .  (109)

	DRONE  shift 4
	PROGRAM_END  shift 14
	TIMER  shift 5
	TYPE_STRING  shift 6
	TYPE_FLOAT  shift 7
	TYPE_INT  shift 8
	TYPE_BOOL  shift 9
	VOID_FUNC  shift 10
	VARIABLE  reduce 109

	function  goto 15
	ident_type  goto 13


state 12
	functions : function .  (5)

	.  reduce 5


state 13
	function : ident_type . function_name LSQ parameter_list RSQ END_STATEMENT body  (6)

	VARIABLE  shift 16
	.  error

	function_name  goto 17


state 14
	program : PROGRAM_BEGIN functions PROGRAM_END .  (2)

	.  reduce 2


state 15
	functions : functions function .  (4)

	.  reduce 4


state 16
	function_name : VARIABLE .  (8)

	.  reduce 8


state 17
	function : ident_type function_name . LSQ parameter_list RSQ END_STATEMENT body  (6)

	LSQ  shift 18
	.  error


state 18
	function : ident_type function_name LSQ . parameter_list RSQ END_STATEMENT body  (6)
	parameter_list : .  (11)
	ident_type : .  (109)

	DRONE  shift 4
	TIMER  shift 5
	TYPE_STRING  shift 6
	TYPE_FLOAT  shift 7
	TYPE_INT  shift 8
	TYPE_BOOL  shift 9
	VOID_FUNC  shift 10
	CONST  reduce 109
	VARIABLE  reduce 109
	RSQ  reduce 11

	ident_type  goto 19
	parameter_list  goto 20


state 19
	parameter_list : ident_type . parameter COMMA SMALLER_THAN parameter_list BIGGER_THAN  (9)
	parameter_list : ident_type . parameter  (10)

	CONST  shift 21
	VARIABLE  shift 22
	.  error

	parameter  goto 23
	variable  goto 24


state 20
	function : ident_type function_name LSQ parameter_list . RSQ END_STATEMENT body  (6)

	RSQ  shift 25
	.  error


state 21
	variable : CONST .  (14)

	.  reduce 14


state 22
	variable : VARIABLE .  (13)

	.  reduce 13


state 23
	parameter_list : ident_type parameter . COMMA SMALLER_THAN parameter_list BIGGER_THAN  (9)
	parameter_list : ident_type parameter .  (10)

	COMMA  shift 26
	BIGGER_THAN  reduce 10
	RSQ  reduce 10


state 24
	parameter : variable .  (12)

	.  reduce 12


state 25
	function : ident_type function_name LSQ parameter_list RSQ . END_STATEMENT body  (6)

	END_STATEMENT  shift 27
	.  error


state 26
	parameter_list : ident_type parameter COMMA . SMALLER_THAN parameter_list BIGGER_THAN  (9)

	SMALLER_THAN  shift 28
	.  error


27: shift/reduce conflict (shift 39, reduce 109) on VARIABLE
state 27
	function : ident_type function_name LSQ parameter_list RSQ END_STATEMENT . body  (6)
	ident_type : .  (109)

	IF  shift 29
	DRONE  shift 4
	TIMER  shift 5
	TYPE_STRING  shift 6
	TYPE_FLOAT  shift 7
	TYPE_INT  shift 8
	TYPE_BOOL  shift 9
	WHILE_LOOP  shift 30
	FOR_LOOP  shift 31
	PRINT_STATEMENT  shift 32
	VOID_FUNC  shift 10
	INCLINE_FUNC  shift 33
	ALTITUDE_FUNC  shift 34
	ACCEL_FUNC  shift 35
	TEMPR_FUNC  shift 36
	ON_FUNC  shift 37
	OFF_FUNC  shift 38
	VARIABLE  shift 39
	COMMENT  shift 40
	PICTURE_FUNC  reduce 109
	CAPTURE_FUNC  reduce 109
	CONNECT_FUNC  reduce 109
	TIME_FUNC  reduce 109
	TIMER_FUNC  reduce 109

	ident_type  goto 41
	body  goto 42
	stmts  goto 43
	stmt  goto 44
	matched  goto 45
	unmatched  goto 46
	non_if_stmts  goto 47
	assignment  goto 48
	primitive_func  goto 49
	inclination  goto 50
	altitude  goto 51
	temperature  goto 52
	acceleration  goto 53
	camera_on  goto 54
	camera_off  goto 55
	picture  goto 56
	capture  goto 57
	connect  goto 58
	time  goto 59
	get_timer  goto 60
	var  goto 61


state 28
	parameter_list : ident_type parameter COMMA SMALLER_THAN . parameter_list BIGGER_THAN  (9)
	parameter_list : .  (11)
	ident_type : .  (109)

	DRONE  shift 4
	TIMER  shift 5
	TYPE_STRING  shift 6
	TYPE_FLOAT  shift 7
	TYPE_INT  shift 8
	TYPE_BOOL  shift 9
	VOID_FUNC  shift 10
	CONST  reduce 109
	VARIABLE  reduce 109
	BIGGER_THAN  reduce 11

	ident_type  goto 19
	parameter_list  goto 62


state 29
	matched : IF . log_stmts END_STATEMENT matched ELSE END_STATEMENT matched  (22)
	unmatched : IF . log_stmts END_STATEMENT stmt  (24)
	unmatched : IF . log_stmts END_STATEMENT matched ELSE END_STATEMENT unmatched  (25)

	NOT  shift 63
	.  error

	log_stmts  goto 64
	and_cond  goto 65
	not_cond  goto 66


state 30
	non_if_stmts : WHILE_LOOP .  (28)

	.  reduce 28


state 31
	non_if_stmts : FOR_LOOP .  (29)

	.  reduce 29


state 32
	non_if_stmts : PRINT_STATEMENT .  (30)

	.  reduce 30


state 33
	inclination : INCLINE_FUNC . LSQ RSQ  (45)

	LSQ  shift 67
	.  error


state 34
	altitude : ALTITUDE_FUNC . LSQ RSQ END_STATEMENT  (46)

	LSQ  shift 68
	.  error


state 35
	acceleration : ACCEL_FUNC . LSQ RSQ END_STATEMENT  (48)

	LSQ  shift 69
	.  error


state 36
	temperature : TEMPR_FUNC . LSQ RSQ END_STATEMENT  (47)

	LSQ  shift 70
	.  error


state 37
	camera_on : ON_FUNC . LSQ variable RSQ END_STATEMENT  (49)

	LSQ  shift 71
	.  error


state 38
	camera_off : OFF_FUNC . LSQ variable RSQ END_STATEMENT  (50)

	LSQ  shift 72
	.  error


state 39
	var : VARIABLE .  (82)

	.  reduce 82


40: shift/reduce conflict (shift 39, reduce 109) on VARIABLE
state 40
	stmts : COMMENT . stmts  (18)
	ident_type : .  (109)

	IF  shift 29
	DRONE  shift 4
	TIMER  shift 5
	TYPE_STRING  shift 6
	TYPE_FLOAT  shift 7
	TYPE_INT  shift 8
	TYPE_BOOL  shift 9
	WHILE_LOOP  shift 30
	FOR_LOOP  shift 31
	PRINT_STATEMENT  shift 32
	VOID_FUNC  shift 10
	INCLINE_FUNC  shift 33
	ALTITUDE_FUNC  shift 34
	ACCEL_FUNC  shift 35
	TEMPR_FUNC  shift 36
	ON_FUNC  shift 37
	OFF_FUNC  shift 38
	VARIABLE  shift 39
	COMMENT  shift 40
	PICTURE_FUNC  reduce 109
	CAPTURE_FUNC  reduce 109
	CONNECT_FUNC  reduce 109
	TIME_FUNC  reduce 109
	TIMER_FUNC  reduce 109

	ident_type  goto 41
	stmts  goto 73
	stmt  goto 44
	matched  goto 45
	unmatched  goto 46
	non_if_stmts  goto 47
	assignment  goto 48
	primitive_func  goto 49
	inclination  goto 50
	altitude  goto 51
	temperature  goto 52
	acceleration  goto 53
	camera_on  goto 54
	camera_off  goto 55
	picture  goto 56
	capture  goto 57
	connect  goto 58
	time  goto 59
	get_timer  goto 60
	var  goto 61


state 41
	picture : ident_type . PICTURE_FUNC LSQ variable RSQ END_STATEMENT  (51)
	capture : ident_type . CAPTURE_FUNC LSQ RSQ END_STATEMENT  (52)
	connect : ident_type . CONNECT_FUNC LSQ variable COMMA variable RSQ END_STATEMENT  (53)
	time : ident_type . TIME_FUNC LSQ variable RSQ END_STATEMENT  (54)
	get_timer : ident_type . TIMER_FUNC LSQ variable RSQ END_STATEMENT  (55)
	assignment : ident_type . var ASGN_OP log_stmts  (62)
	assignment : ident_type . var ASGN_OP math_expr  (63)
	assignment : ident_type . var ASGN_OP var BELONGS func_start  (64)
	assignment : ident_type . var ASGN_OP dronic  (65)

	PICTURE_FUNC  shift 74
	CAPTURE_FUNC  shift 75
	CONNECT_FUNC  shift 76
	TIME_FUNC  shift 77
	TIMER_FUNC  shift 78
	VARIABLE  shift 39
	.  error

	var  goto 79


state 42
	function : ident_type function_name LSQ parameter_list RSQ END_STATEMENT body .  (6)

	.  reduce 6


state 43
	body : stmts . RETURN variable  (15)
	stmts : stmts . COMMENT  (19)

	RETURN  shift 80
	COMMENT  shift 81
	.  error


44: shift/reduce conflict (shift 39, reduce 109) on VARIABLE
44: shift/reduce conflict (shift 40, reduce 16) on COMMENT
state 44
	stmts : stmt .  (16)
	stmts : stmt . stmts  (17)
	ident_type : .  (109)

	IF  shift 29
	DRONE  shift 4
	TIMER  shift 5
	TYPE_STRING  shift 6
	TYPE_FLOAT  shift 7
	TYPE_INT  shift 8
	TYPE_BOOL  shift 9
	WHILE_LOOP  shift 30
	FOR_LOOP  shift 31
	PRINT_STATEMENT  shift 32
	VOID_FUNC  shift 10
	INCLINE_FUNC  shift 33
	ALTITUDE_FUNC  shift 34
	ACCEL_FUNC  shift 35
	TEMPR_FUNC  shift 36
	ON_FUNC  shift 37
	OFF_FUNC  shift 38
	VARIABLE  shift 39
	COMMENT  shift 40
	RETURN  reduce 16
	PICTURE_FUNC  reduce 109
	CAPTURE_FUNC  reduce 109
	CONNECT_FUNC  reduce 109
	TIME_FUNC  reduce 109
	TIMER_FUNC  reduce 109

	ident_type  goto 41
	stmts  goto 82
	stmt  goto 44
	matched  goto 45
	unmatched  goto 46
	non_if_stmts  goto 47
	assignment  goto 48
	primitive_func  goto 49
	inclination  goto 50
	altitude  goto 51
	temperature  goto 52
	acceleration  goto 53
	camera_on  goto 54
	camera_off  goto 55
	picture  goto 56
	capture  goto 57
	connect  goto 58
	time  goto 59
	get_timer  goto 60
	var  goto 61


state 45
	stmt : matched .  (20)

	.  reduce 20


state 46
	stmt : unmatched .  (21)

	.  reduce 21


state 47
	matched : non_if_stmts .  (23)

	.  reduce 23


state 48
	non_if_stmts : assignment .  (26)

	.  reduce 26


state 49
	non_if_stmts : primitive_func .  (27)

	.  reduce 27


state 50
	primitive_func : inclination .  (31)

	.  reduce 31


state 51
	primitive_func : altitude .  (32)

	.  reduce 32


state 52
	primitive_func : temperature .  (33)

	.  reduce 33


state 53
	primitive_func : acceleration .  (34)

	.  reduce 34


state 54
	primitive_func : camera_on .  (35)

	.  reduce 35


state 55
	primitive_func : camera_off .  (36)

	.  reduce 36


state 56
	primitive_func : picture .  (37)

	.  reduce 37


state 57
	primitive_func : capture .  (38)

	.  reduce 38


state 58
	primitive_func : connect .  (39)

	.  reduce 39


state 59
	primitive_func : time .  (40)

	.  reduce 40


state 60
	primitive_func : get_timer .  (41)

	.  reduce 41


state 61
	assignment : var . ASGN_OP var  (66)
	assignment : var . ASGN_OP log_stmts  (67)
	assignment : var . ASGN_OP math_expr  (68)
	assignment : var . ASGN_OP VARIABLE BELONGS func_start  (69)

	ASGN_OP  shift 83
	.  error


state 62
	parameter_list : ident_type parameter COMMA SMALLER_THAN parameter_list . BIGGER_THAN  (9)

	BIGGER_THAN  shift 84
	.  error


state 63
	not_cond : NOT . log_stmts  (60)

	NOT  shift 63
	.  error

	log_stmts  goto 85
	and_cond  goto 65
	not_cond  goto 66


64: shift/reduce conflict (shift 86, reduce 61) on OR
64: shift/reduce conflict (shift 87, reduce 61) on END_STATEMENT
state 64
	matched : IF log_stmts . END_STATEMENT matched ELSE END_STATEMENT matched  (22)
	unmatched : IF log_stmts . END_STATEMENT stmt  (24)
	unmatched : IF log_stmts . END_STATEMENT matched ELSE END_STATEMENT unmatched  (25)
	log_stmts : log_stmts . OR and_cond  (56)
	not_cond : log_stmts .  (61)

	OR  shift 86
	END_STATEMENT  shift 87
	AND  reduce 61


65: shift/reduce conflict (shift 88, reduce 57) on AND
state 65
	log_stmts : and_cond .  (57)
	and_cond : and_cond . AND not_cond  (58)

	AND  shift 88
	IF  reduce 57
	ELSE  reduce 57
	DRONE  reduce 57
	TIMER  reduce 57
	TYPE_STRING  reduce 57
	TYPE_FLOAT  reduce 57
	TYPE_INT  reduce 57
	TYPE_BOOL  reduce 57
	RETURN  reduce 57
	WHILE_LOOP  reduce 57
	FOR_LOOP  reduce 57
	OR  reduce 57
	PRINT_STATEMENT  reduce 57
	VOID_FUNC  reduce 57
	INCLINE_FUNC  reduce 57
	ALTITUDE_FUNC  reduce 57
	ACCEL_FUNC  reduce 57
	TEMPR_FUNC  reduce 57
	ON_FUNC  reduce 57
	OFF_FUNC  reduce 57
	PICTURE_FUNC  reduce 57
	CAPTURE_FUNC  reduce 57
	CONNECT_FUNC  reduce 57
	TIME_FUNC  reduce 57
	TIMER_FUNC  reduce 57
	VARIABLE  reduce 57
	END_STATEMENT  reduce 57
	COMMENT  reduce 57


state 66
	and_cond : not_cond .  (59)

	.  reduce 59


state 67
	inclination : INCLINE_FUNC LSQ . RSQ  (45)

	RSQ  shift 89
	.  error


state 68
	altitude : ALTITUDE_FUNC LSQ . RSQ END_STATEMENT  (46)

	RSQ  shift 90
	.  error


state 69
	acceleration : ACCEL_FUNC LSQ . RSQ END_STATEMENT  (48)

	RSQ  shift 91
	.  error


state 70
	temperature : TEMPR_FUNC LSQ . RSQ END_STATEMENT  (47)

	RSQ  shift 92
	.  error


state 71
	camera_on : ON_FUNC LSQ . variable RSQ END_STATEMENT  (49)

	CONST  shift 21
	VARIABLE  shift 22
	.  error

	variable  goto 93


state 72
	camera_off : OFF_FUNC LSQ . variable RSQ END_STATEMENT  (50)

	CONST  shift 21
	VARIABLE  shift 22
	.  error

	variable  goto 94


73: shift/reduce conflict (shift 81, reduce 18) on COMMENT
state 73
	stmts : COMMENT stmts .  (18)
	stmts : stmts . COMMENT  (19)

	COMMENT  shift 81
	RETURN  reduce 18


state 74
	picture : ident_type PICTURE_FUNC . LSQ variable RSQ END_STATEMENT  (51)

	LSQ  shift 95
	.  error


state 75
	capture : ident_type CAPTURE_FUNC . LSQ RSQ END_STATEMENT  (52)

	LSQ  shift 96
	.  error


state 76
	connect : ident_type CONNECT_FUNC . LSQ variable COMMA variable RSQ END_STATEMENT  (53)

	LSQ  shift 97
	.  error


state 77
	time : ident_type TIME_FUNC . LSQ variable RSQ END_STATEMENT  (54)

	LSQ  shift 98
	.  error


state 78
	get_timer : ident_type TIMER_FUNC . LSQ variable RSQ END_STATEMENT  (55)

	LSQ  shift 99
	.  error


state 79
	assignment : ident_type var . ASGN_OP log_stmts  (62)
	assignment : ident_type var . ASGN_OP math_expr  (63)
	assignment : ident_type var . ASGN_OP var BELONGS func_start  (64)
	assignment : ident_type var . ASGN_OP dronic  (65)

	ASGN_OP  shift 100
	.  error


state 80
	body : stmts RETURN . variable  (15)

	CONST  shift 21
	VARIABLE  shift 22
	.  error

	variable  goto 101


state 81
	stmts : stmts COMMENT .  (19)

	.  reduce 19


82: shift/reduce conflict (shift 81, reduce 17) on COMMENT
state 82
	stmts : stmt stmts .  (17)
	stmts : stmts . COMMENT  (19)

	COMMENT  shift 81
	RETURN  reduce 17


83: shift/reduce conflict (shift 102, reduce 90) on VARIABLE
83: shift/reduce conflict (shift 103, reduce 90) on ADD
83: shift/reduce conflict (shift 104, reduce 90) on SUBTRACT
state 83
	assignment : var ASGN_OP . var  (66)
	assignment : var ASGN_OP . log_stmts  (67)
	assignment : var ASGN_OP . math_expr  (68)
	assignment : var ASGN_OP . VARIABLE BELONGS func_start  (69)
	factor : .  (90)

	NOT  shift 63
	VARIABLE  shift 102
	ADD  shift 103
	SUBTRACT  shift 104
	IF  reduce 90
	ELSE  reduce 90
	DRONE  reduce 90
	TIMER  reduce 90
	TYPE_STRING  reduce 90
	TYPE_FLOAT  reduce 90
	TYPE_INT  reduce 90
	TYPE_BOOL  reduce 90
	RETURN  reduce 90
	WHILE_LOOP  reduce 90
	FOR_LOOP  reduce 90
	PRINT_STATEMENT  reduce 90
	VOID_FUNC  reduce 90
	INCLINE_FUNC  reduce 90
	ALTITUDE_FUNC  reduce 90
	ACCEL_FUNC  reduce 90
	TEMPR_FUNC  reduce 90
	ON_FUNC  reduce 90
	OFF_FUNC  reduce 90
	PICTURE_FUNC  reduce 90
	CAPTURE_FUNC  reduce 90
	CONNECT_FUNC  reduce 90
	TIME_FUNC  reduce 90
	TIMER_FUNC  reduce 90
	MULTIPLY  reduce 90
	COMMENT  reduce 90

	log_stmts  goto 105
	var  goto 106
	and_cond  goto 65
	not_cond  goto 66
	math_expr  goto 107
	term  goto 108
	factor  goto 109


state 84
	parameter_list : ident_type parameter COMMA SMALLER_THAN parameter_list BIGGER_THAN .  (9)

	.  reduce 9


85: reduce/reduce conflict (reduce 60, reduce 61) on IF
85: reduce/reduce conflict (reduce 60, reduce 61) on ELSE
85: reduce/reduce conflict (reduce 60, reduce 61) on DRONE
85: reduce/reduce conflict (reduce 60, reduce 61) on TIMER
85: reduce/reduce conflict (reduce 60, reduce 61) on TYPE_STRING
85: reduce/reduce conflict (reduce 60, reduce 61) on TYPE_FLOAT
85: reduce/reduce conflict (reduce 60, reduce 61) on TYPE_INT
85: reduce/reduce conflict (reduce 60, reduce 61) on TYPE_BOOL
85: reduce/reduce conflict (reduce 60, reduce 61) on RETURN
85: reduce/reduce conflict (reduce 60, reduce 61) on WHILE_LOOP
85: reduce/reduce conflict (reduce 60, reduce 61) on FOR_LOOP
85: shift/reduce conflict (shift 86, reduce 60) on OR
85: shift/reduce conflict (shift 86, reduce 61) on OR
85: reduce/reduce conflict (reduce 60, reduce 61) on AND
85: reduce/reduce conflict (reduce 60, reduce 61) on PRINT_STATEMENT
85: reduce/reduce conflict (reduce 60, reduce 61) on VOID_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on INCLINE_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on ALTITUDE_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on ACCEL_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on TEMPR_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on ON_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on OFF_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on PICTURE_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on CAPTURE_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on CONNECT_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on TIME_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on TIMER_FUNC
85: reduce/reduce conflict (reduce 60, reduce 61) on VARIABLE
85: reduce/reduce conflict (reduce 60, reduce 61) on END_STATEMENT
85: reduce/reduce conflict (reduce 60, reduce 61) on COMMENT
state 85
	log_stmts : log_stmts . OR and_cond  (56)
	not_cond : NOT log_stmts .  (60)
	not_cond : log_stmts .  (61)
